Refactored dialogs and UI based code for better performance. Refactored network protocols for using specific types instead of text. Added Skin Preview for default, player based and remote skins. Added Skin Manager to better handling of different skins and styles. Added possibility to adding Skin over username. Added possibility to adding Skin over remote url. Added possibility to remove NPC. Improved separation of client and server side handling.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -9,5 +9,9 @@
   "item.easy_npc.humanoid_spawn_egg": "Humanoid NPC Spawn Egg",
   "item.easy_npc.villager_spawn_egg": "Villager NPC Spawn Egg",
 
-  "itemGroup.easy_npc.spawn_eggs" : "Easy NPC (Spawn Eggs)"
+  "text.easy_npc.removeNPC.deleteQuestion": "Are you sure you want to delete this NPC?",
+  "text.easy_npc.removeNPC.deleteWarning": "'%s' will be lost forever! (A long time!)",
+  "text.easy_npc.removeNPC.deleteButton": "Delete",
+
+  "itemGroup.easy_npc.spawn_eggs": "Easy NPC (Spawn Eggs)"
 }
