Added Interaction action which could be triggered without any dialog. Added Skeleton model and remote skins support. Unified configuration UIs and added translation keys. Improved yes/no dialog buttons to allow longer texts to fix #3. Improved value validation and status updates. Improved texture manager for custom models. Remove test NPC spawn eggs.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -1,17 +1,50 @@
 {
-  "entity.easy_npc.fairy": "Fairy NPC",
-  "entity.easy_npc.humanoid_slim": "Humanoid (slim) NPC",
-  "entity.easy_npc.humanoid": "Humanoid NPC",
-  "entity.easy_npc.villager": "Villager NPC",
+  "entity.easy_npc.fairy": "Fairy",
+  "entity.easy_npc.humanoid": "Humanoid",
+  "entity.easy_npc.humanoid_slim": "Humanoid (slim)",
+  "entity.easy_npc.skeleton": "Skeleton",
+  "entity.easy_npc.villager": "Villager",
 
   "item.easy_npc.fairy_spawn_egg": "Fairy NPC Spawn Egg",
   "item.easy_npc.humanoid_slim_spawn_egg": "Humanoid (slim) NPC Spawn Egg",
   "item.easy_npc.humanoid_spawn_egg": "Humanoid NPC Spawn Egg",
+  "item.easy_npc.skeleton_spawn_egg": "Skeleton NPC-Spawn-Ei",
   "item.easy_npc.villager_spawn_egg": "Villager NPC Spawn Egg",
 
+  "text.easy_npc.config.actions": "Actions",
+  "text.easy_npc.config.add": "Add",
+  "text.easy_npc.config.basic_actions": "Basic",
+  "text.easy_npc.config.basic_dialog": "Basic",
+  "text.easy_npc.config.cancel": "Cancel",
+  "text.easy_npc.config.clear": "Clear",
+  "text.easy_npc.config.custom_skin": "Custom",
+  "text.easy_npc.config.debug": "Debug",
+  "text.easy_npc.config.default_skin": "Default",
+  "text.easy_npc.config.delete": "Delete",
+  "text.easy_npc.config.dialog": "Dialog",
+  "text.easy_npc.config.dialog_text": "Dialog Text",
+  "text.easy_npc.config.no": "No",
+  "text.easy_npc.config.no_answer": "No - Answer",
+  "text.easy_npc.config.on_close_dialog": "On Close Dialog",
+  "text.easy_npc.config.on_interaction": "On Interaction",
+  "text.easy_npc.config.on_no_selection": "On No Selection",
+  "text.easy_npc.config.on_open_dialog": "On Open Dialog",
+  "text.easy_npc.config.on_yes_selection": "On Yes Selection",
+  "text.easy_npc.config.player_skin": "Player",
+  "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
+  "text.easy_npc.config.question": "Question",
+  "text.easy_npc.config.save": "Save",
+  "text.easy_npc.config.save_name": "Save Name",
+  "text.easy_npc.config.skin": "Skin",
+  "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
+  "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
+  "text.easy_npc.config.yes": "Yes",
+  "text.easy_npc.config.yes_answer": "Yes - Answer",
+  "text.easy_npc.config.yes_no_dialog": "Yes/No",
+
+  "text.easy_npc.removeNPC.deleteButton": "Delete",
   "text.easy_npc.removeNPC.deleteQuestion": "Are you sure you want to delete this NPC?",
   "text.easy_npc.removeNPC.deleteWarning": "'%s' will be lost forever! (A long time!)",
-  "text.easy_npc.removeNPC.deleteButton": "Delete",
 
   "itemGroup.easy_npc.spawn_eggs": "Easy NPC (Spawn Eggs)"
 }
