Added scaling configuration. Replaced some free text options with enums.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -34,8 +34,13 @@
   "text.easy_npc.config.player_skin": "Spieler",
   "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
+  "text.easy_npc.config.reset": "Zurücksetzen",
   "text.easy_npc.config.save": "Speichern",
   "text.easy_npc.config.save_name": "Name speichern",
+  "text.easy_npc.config.scale_x": "Skaliere X",
+  "text.easy_npc.config.scale_y": "Skaliere Y",
+  "text.easy_npc.config.scale_z": "Skaliere Z",
+  "text.easy_npc.config.scaling": "Skalierung",
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen oder eine Skin-URL",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
