Added scaling configuration. Replaced some free text options with enums.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -36,8 +36,13 @@
   "text.easy_npc.config.player_skin": "Player",
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
+  "text.easy_npc.config.reset": "Reset",
   "text.easy_npc.config.save": "Save",
   "text.easy_npc.config.save_name": "Save Name",
+  "text.easy_npc.config.scale_x": "Scale X",
+  "text.easy_npc.config.scale_y": "Scale Y",
+  "text.easy_npc.config.scale_z": "Scale Z",
+  "text.easy_npc.config.scaling": "Scaling",
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
