Added custom data serialization to support more complex data types. Improved performance of server and client processing by using custom data serialization. Added basic pose support for Easy NPC entities.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -17,8 +17,10 @@
   "text.easy_npc.config.basic_dialog": "Einfach",
   "text.easy_npc.config.cancel": "Abbrechen",
   "text.easy_npc.config.clear": "Löschen",
+  "text.easy_npc.config.custom_pose": "Benutzerdefiniert",
   "text.easy_npc.config.custom_skin": "Benutzerdefiniert",
   "text.easy_npc.config.debug": "Debuggen",
+  "text.easy_npc.config.default_pose": "Standard",
   "text.easy_npc.config.default_skin": "Standard",
   "text.easy_npc.config.delete": "Löschen",
   "text.easy_npc.config.dialog": "Dialog",
@@ -32,6 +34,15 @@
   "text.easy_npc.config.on_open_dialog": "Beim öffnen des Dialog",
   "text.easy_npc.config.on_yes_selection": "Beim auswählen von Ja",
   "text.easy_npc.config.player_skin": "Spieler",
+  "text.easy_npc.config.pose": "Pose",
+  "text.easy_npc.config.pose.crouching": "Hocken",
+  "text.easy_npc.config.pose.dying": "Sterben",
+  "text.easy_npc.config.pose.fall_flying": "Fallen von Fliegen",
+  "text.easy_npc.config.pose.long_jumping": "Weitspringen",
+  "text.easy_npc.config.pose.sleeping": "Schlafen",
+  "text.easy_npc.config.pose.spin_attack": "Drehender Angriff",
+  "text.easy_npc.config.pose.standing": "Stehen",
+  "text.easy_npc.config.pose.swimming": "Schwimmen",
   "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
   "text.easy_npc.config.reset": "Zurücksetzen",
