--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -17,8 +17,10 @@
   "text.easy_npc.config.basic_dialog": "Basic",
   "text.easy_npc.config.cancel": "Cancel",
   "text.easy_npc.config.clear": "Clear",
+  "text.easy_npc.config.custom_pose": "Custom",
   "text.easy_npc.config.custom_skin": "Custom",
   "text.easy_npc.config.debug": "Debug",
+  "text.easy_npc.config.default_pose": "Default",
   "text.easy_npc.config.default_skin": "Default",
   "text.easy_npc.config.delete": "Delete",
   "text.easy_npc.config.dialog": "Dialog",
@@ -32,6 +34,15 @@
   "text.easy_npc.config.on_open_dialog": "On Open Dialog",
   "text.easy_npc.config.on_yes_selection": "On Yes Selection",
   "text.easy_npc.config.player_skin": "Player",
+  "text.easy_npc.config.pose": "Pose",
+  "text.easy_npc.config.pose.crouching": "Crouching",
+  "text.easy_npc.config.pose.dying": "Dying",
+  "text.easy_npc.config.pose.fall_flying": "Fall Flying",
+  "text.easy_npc.config.pose.long_jumping": "Long Jumping",
+  "text.easy_npc.config.pose.sleeping": "Sleeping",
+  "text.easy_npc.config.pose.spin_attack": "Spinning Attack",
+  "text.easy_npc.config.pose.standing": "Standing",
+  "text.easy_npc.config.pose.swimming": "Swimming",
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
   "text.easy_npc.config.reset": "Reset",
