--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -6,6 +6,8 @@
   "entity.easy_npc.skeleton": "Skeleton",
   "entity.easy_npc.villager": "Villager",
 
+  "item.easy_npc.easy_npc_wand": "EasyNPC Wand",
+
   "item.easy_npc.allay_spawn_egg": "Allay NPC Spawn Egg",
   "item.easy_npc.fairy_spawn_egg": "Fairy NPC Spawn Egg",
   "item.easy_npc.humanoid_slim_spawn_egg": "Humanoid (slim) NPC Spawn Egg",
@@ -23,6 +25,7 @@
   "text.easy_npc.config.custom_skin": "Custom",
   "text.easy_npc.config.debug": "Debug",
   "text.easy_npc.config.default_pose": "Default",
+  "text.easy_npc.config.default_position": "Default",
   "text.easy_npc.config.default_skin": "Default",
   "text.easy_npc.config.delete": "Delete",
   "text.easy_npc.config.dialog": "Dialog",
@@ -45,6 +48,7 @@
   "text.easy_npc.config.pose.spin_attack": "Spinning Attack",
   "text.easy_npc.config.pose.standing": "Standing",
   "text.easy_npc.config.pose.swimming": "Swimming",
+  "text.easy_npc.config.position": "Position",
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
   "text.easy_npc.config.reset": "Reset",
@@ -61,9 +65,12 @@
   "text.easy_npc.config.yes_answer": "Yes - Answer",
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
 
+  "text.easy_npc.item.easy_npc_wand": "The Easy NPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
+
   "text.easy_npc.removeNPC.deleteButton": "Delete",
   "text.easy_npc.removeNPC.deleteQuestion": "Are you sure you want to delete this NPC?",
   "text.easy_npc.removeNPC.deleteWarning": "'%s' will be lost forever! (A long time!)",
 
-  "itemGroup.easy_npc.spawn_eggs": "Easy NPC (Spawn Eggs)"
+  "itemGroup.easy_npc.config_items": "EasyNPC - Config Items",
+  "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs"
 }
