Added support for custom poses which allows to rotate the head, body, arms and legs.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -38,10 +38,17 @@
   "text.easy_npc.config.on_yes_selection": "Beim auswählen von Ja",
   "text.easy_npc.config.player_skin": "Spieler",
   "text.easy_npc.config.pose": "Pose",
+  "text.easy_npc.config.pose.body": "Körper",
   "text.easy_npc.config.pose.crouching": "Hocken",
   "text.easy_npc.config.pose.dying": "Sterben",
   "text.easy_npc.config.pose.fall_flying": "Fallen von Fliegen",
+  "text.easy_npc.config.pose.head": "Kopf",
+  "text.easy_npc.config.pose.left_arm": "Linker Arm",
+  "text.easy_npc.config.pose.left_leg": "Linkes Bein",
   "text.easy_npc.config.pose.long_jumping": "Weitspringen",
+  "text.easy_npc.config.pose.reset": "Zurücksetzen",
+  "text.easy_npc.config.pose.right_arm": "Rechter Arm",
+  "text.easy_npc.config.pose.right_leg": "Rechtes Bein",
   "text.easy_npc.config.pose.sleeping": "Schlafen",
   "text.easy_npc.config.pose.spin_attack": "Drehender Angriff",
   "text.easy_npc.config.pose.standing": "Stehen",
