Added support for custom poses which allows to rotate the head, body, arms and legs.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -40,10 +40,17 @@
   "text.easy_npc.config.on_yes_selection": "On Yes Selection",
   "text.easy_npc.config.player_skin": "Player",
   "text.easy_npc.config.pose": "Pose",
+  "text.easy_npc.config.pose.body": "Body",
   "text.easy_npc.config.pose.crouching": "Crouching",
   "text.easy_npc.config.pose.dying": "Dying",
   "text.easy_npc.config.pose.fall_flying": "Fall Flying",
+  "text.easy_npc.config.pose.head": "Head",
+  "text.easy_npc.config.pose.left_arm": "Left Arm",
+  "text.easy_npc.config.pose.left_leg": "Left Leg",
   "text.easy_npc.config.pose.long_jumping": "Long Jumping",
+  "text.easy_npc.config.pose.reset": "Reset",
+  "text.easy_npc.config.pose.right_arm": "Right Arm",
+  "text.easy_npc.config.pose.right_leg": "Right Leg",
   "text.easy_npc.config.pose.sleeping": "Sleeping",
   "text.easy_npc.config.pose.spin_attack": "Spinning Attack",
   "text.easy_npc.config.pose.standing": "Standing",
