Added support for custom model rotations and to lock rotations. Added support to disable dialog. Improved network protocol to support more complex data types. Improved NPC wand to easier select rotated and scaled NPCs. Refactored entity data for easier maintenance. Moved documentation to separate Wiki.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -24,11 +24,16 @@
   "text.easy_npc.config.debug": "Debuggen",
   "text.easy_npc.config.default_pose": "Standard",
   "text.easy_npc.config.default_position": "Standard",
+  "text.easy_npc.config.default_rotation": "Standard",
   "text.easy_npc.config.default_skin": "Standard",
   "text.easy_npc.config.delete": "Löschen",
   "text.easy_npc.config.dialog": "Dialog",
   "text.easy_npc.config.dialog_text": "Dialogtext",
+  "text.easy_npc.config.disable_dialog": "Keinen",
+  "text.easy_npc.config.disable_dialog_checkbox": "Deaktiviere Dialog",
+  "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
   "text.easy_npc.config.equipment": "Ausrüstung",
+  "text.easy_npc.config.lock_rotation": "Sperre",
   "text.easy_npc.config.no": "Nein",
   "text.easy_npc.config.no_answer": "Nein - Antwort",
   "text.easy_npc.config.on_close_dialog": "Beim schließen des Dialog",
@@ -57,6 +62,7 @@
   "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
   "text.easy_npc.config.reset": "Zurücksetzen",
+  "text.easy_npc.config.rotation": "Rotation",
   "text.easy_npc.config.save": "Speichern",
   "text.easy_npc.config.save_name": "Name speichern",
   "text.easy_npc.config.scale_x": "Skaliere X",
