Added support for custom model rotations and to lock rotations. Added support to disable dialog. Improved network protocol to support more complex data types. Improved NPC wand to easier select rotated and scaled NPCs. Refactored entity data for easier maintenance. Moved documentation to separate Wiki.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -26,11 +26,16 @@
   "text.easy_npc.config.debug": "Debug",
   "text.easy_npc.config.default_pose": "Default",
   "text.easy_npc.config.default_position": "Default",
+  "text.easy_npc.config.default_rotation": "Default",
   "text.easy_npc.config.default_skin": "Default",
   "text.easy_npc.config.delete": "Delete",
   "text.easy_npc.config.dialog": "Dialog",
   "text.easy_npc.config.dialog_text": "Dialog Text",
+  "text.easy_npc.config.disable_dialog": "None",
+  "text.easy_npc.config.disable_dialog_checkbox": "Disable Dialog",
+  "text.easy_npc.config.disable_dialog_text": "The checkbox will disable the dialog, which means that the dialog will not be displayed or activated when the checkbox is selected or checked.\nThis can be useful when the dialog is not necessary or may be intrusive to the user experience",
   "text.easy_npc.config.equipment": "Equipment",
+  "text.easy_npc.config.lock_rotation": "Lock",
   "text.easy_npc.config.no": "No",
   "text.easy_npc.config.no_answer": "No - Answer",
   "text.easy_npc.config.on_close_dialog": "On Close Dialog",
@@ -59,6 +64,7 @@
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
   "text.easy_npc.config.reset": "Reset",
+  "text.easy_npc.config.rotation": "Rotation",
   "text.easy_npc.config.save": "Save",
   "text.easy_npc.config.save_name": "Save Name",
   "text.easy_npc.config.scale_x": "Scale X",
