Added new Zombie and Zombie Villager models. Added custom texture support for individual texture skins for map makers. Added possibility to execute commands as player. Fixed locked rotation for custom models by resetting rotations. Fixed crash when using invalid numbers for position. Fixed issue with invisible NPCs. Improved documentation and added more examples.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -2,8 +2,11 @@
   "entity.easy_npc.fairy": "Feen",
   "entity.easy_npc.humanoid": "Humanoider",
   "entity.easy_npc.humanoid_slim": "Humanoider (schl.)",
+  "entity.easy_npc.iron_golem": "Eisengolem",
   "entity.easy_npc.skeleton": "Skelett",
   "entity.easy_npc.villager": "Dorfbewohner",
+  "entity.easy_npc.zombie": "Zombie",
+  "entity.easy_npc.zombie_villager": "Zombie-Dorfbewohner",
 
   "item.easy_npc.easy_npc_wand": "EasyNPC Stab",
 
@@ -21,6 +24,7 @@
   "text.easy_npc.config.clear": "Löschen",
   "text.easy_npc.config.custom_pose": "Benutzerdefiniert",
   "text.easy_npc.config.custom_skin": "Benutzerdefiniert",
+  "text.easy_npc.config.custom_skin_text": "Custom Skins ermöglicht es dir, lokal gespeicherte Skins für die NPCs zu verwenden.\nInnerhalb deines Minecraft-Konfigurationsordners findest du einen Ordner namens `easy_npc/skins` mit einem Unterordner für jeden NPC-Typ.",
   "text.easy_npc.config.debug": "Debuggen",
   "text.easy_npc.config.default_pose": "Standard",
   "text.easy_npc.config.default_position": "Standard",
@@ -28,11 +32,13 @@
   "text.easy_npc.config.default_skin": "Standard",
   "text.easy_npc.config.delete": "Löschen",
   "text.easy_npc.config.dialog": "Dialog",
+  "text.easy_npc.config.dialog_actions": "Dialog",
   "text.easy_npc.config.dialog_text": "Dialogtext",
   "text.easy_npc.config.disable_dialog": "Keinen",
   "text.easy_npc.config.disable_dialog_checkbox": "Deaktiviere Dialog",
-  "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
+  "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
   "text.easy_npc.config.equipment": "Ausrüstung",
+  "text.easy_npc.config.execute_as_player": "Als Spieler ausführen",
   "text.easy_npc.config.lock_rotation": "Sperre",
   "text.easy_npc.config.no": "Nein",
   "text.easy_npc.config.no_answer": "Nein - Antwort",
