--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -2,8 +2,11 @@
   "entity.easy_npc.fairy": "Fairy",
   "entity.easy_npc.humanoid": "Humanoid",
   "entity.easy_npc.humanoid_slim": "Humanoid (slim)",
+  "entity.easy_npc.iron_golem": "Iron Golem",
   "entity.easy_npc.skeleton": "Skeleton",
   "entity.easy_npc.villager": "Villager",
+  "entity.easy_npc.zombie": "Zombie",
+  "entity.easy_npc.zombie_villager": "Zombie Villager",
 
   "item.easy_npc.easy_npc_wand": "EasyNPC Wand",
 
@@ -21,6 +24,7 @@
   "text.easy_npc.config.clear": "Clear",
   "text.easy_npc.config.custom_pose": "Custom",
   "text.easy_npc.config.custom_skin": "Custom",
+  "text.easy_npc.config.custom_skin_text": "Custom skins allows you to use locally stored skins for the NPCs.\nInside your Minecraft config folder you will find a folder called `easy_npc/skins` with a subfolder for each NPC type.",
   "text.easy_npc.config.debug": "Debug",
   "text.easy_npc.config.default_pose": "Default",
   "text.easy_npc.config.default_position": "Default",
@@ -28,11 +32,13 @@
   "text.easy_npc.config.default_skin": "Default",
   "text.easy_npc.config.delete": "Delete",
   "text.easy_npc.config.dialog": "Dialog",
+  "text.easy_npc.config.dialog_actions": "Dialog",
   "text.easy_npc.config.dialog_text": "Dialog Text",
   "text.easy_npc.config.disable_dialog": "None",
   "text.easy_npc.config.disable_dialog_checkbox": "Disable Dialog",
-  "text.easy_npc.config.disable_dialog_text": "The checkbox will disable the dialog, which means that the dialog will not be displayed or activated when the checkbox is selected or checked.\nThis can be useful when the dialog is not necessary or may be intrusive to the user experience",
+  "text.easy_npc.config.disable_dialog_text": "The checkbox will disable the dialog, which means that the dialog will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the dialog is not necessary or may be intrusive to the user experience",
   "text.easy_npc.config.equipment": "Equipment",
+  "text.easy_npc.config.execute_as_player": "Execute as player",
   "text.easy_npc.config.lock_rotation": "Lock",
   "text.easy_npc.config.no": "No",
   "text.easy_npc.config.no_answer": "No - Answer",
