Added config for basic permission system to control the use of specific options. Added support for normal players to be able to use Easy NPCs with limited options to fix #9. Improved menu handling and general performance.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -34,6 +34,7 @@
   "text.easy_npc.config.dialog": "Dialog",
   "text.easy_npc.config.dialog_actions": "Dialog",
   "text.easy_npc.config.dialog_text": "Dialogtext",
+  "text.easy_npc.config.dialog_placeholder": "Der Dialog unterstützt die folgenden Platzhalter:\n@npc - Name des NPC\n@initiator - Name des Initiators des Dialogs",
   "text.easy_npc.config.disable_dialog": "Keinen",
   "text.easy_npc.config.disable_dialog_checkbox": "Deaktiviere Dialog",
   "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
