Fixed issue #11 with custom texture skins. Improved custom texture screen for better usability.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -24,7 +24,7 @@
   "text.easy_npc.config.clear": "Löschen",
   "text.easy_npc.config.custom_pose": "Benutzerdefiniert",
   "text.easy_npc.config.custom_skin": "Benutzerdefiniert",
-  "text.easy_npc.config.custom_skin_text": "Custom Skins ermöglicht es dir, lokal gespeicherte Skins für die NPCs zu verwenden.\nInnerhalb deines Minecraft-Konfigurationsordners findest du einen Ordner namens `easy_npc/skins` mit einem Unterordner für jeden NPC-Typ.",
+  "text.easy_npc.config.custom_skin_text": "Custom Skins ermöglicht es dir, lokal gespeicherte Skins für die NPCs zu verwenden.",
   "text.easy_npc.config.debug": "Debuggen",
   "text.easy_npc.config.default_pose": "Standard",
   "text.easy_npc.config.default_position": "Standard",
@@ -33,8 +33,8 @@
   "text.easy_npc.config.delete": "Löschen",
   "text.easy_npc.config.dialog": "Dialog",
   "text.easy_npc.config.dialog_actions": "Dialog",
-  "text.easy_npc.config.dialog_text": "Dialogtext",
   "text.easy_npc.config.dialog_placeholder": "Der Dialog unterstützt die folgenden Platzhalter:\n@npc - Name des NPC\n@initiator - Name des Initiators des Dialogs",
+  "text.easy_npc.config.dialog_text": "Dialogtext",
   "text.easy_npc.config.disable_dialog": "Keinen",
   "text.easy_npc.config.disable_dialog_checkbox": "Deaktiviere Dialog",
   "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
@@ -48,6 +48,7 @@
   "text.easy_npc.config.on_no_selection": "Beim auswählen von Nein",
   "text.easy_npc.config.on_open_dialog": "Beim öffnen des Dialog",
   "text.easy_npc.config.on_yes_selection": "Beim auswählen von Ja",
+  "text.easy_npc.config.open_textures_folder": "Ordner für %s Texturen öffnen",
   "text.easy_npc.config.player_skin": "Spieler",
   "text.easy_npc.config.pose": "Pose",
   "text.easy_npc.config.pose.body": "Körper",
@@ -68,6 +69,7 @@
   "text.easy_npc.config.position": "Position",
   "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
+  "text.easy_npc.config.reload_textures": "Texturen neu laden",
   "text.easy_npc.config.reset": "Zurücksetzen",
   "text.easy_npc.config.rotation": "Rotation",
   "text.easy_npc.config.save": "Speichern",
@@ -77,6 +79,7 @@
   "text.easy_npc.config.scale_z": "Skaliere Z",
   "text.easy_npc.config.scaling": "Skalierung",
   "text.easy_npc.config.skin": "Skin",
+  "text.easy_npc.config.skin_reloading": "Skins werden neu geladen, bitte warten ...",
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen oder eine Skin-URL",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
   "text.easy_npc.config.yes": "Ja",
