Fixed issue #11 with custom texture skins. Improved custom texture screen for better usability.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -26,7 +26,7 @@
   "text.easy_npc.config.clear": "Clear",
   "text.easy_npc.config.custom_pose": "Custom",
   "text.easy_npc.config.custom_skin": "Custom",
-  "text.easy_npc.config.custom_skin_text": "Custom skins allows you to use locally stored skins for the NPCs.\nInside your Minecraft config folder you will find a folder called `easy_npc/skins` with a subfolder for each NPC type.",
+  "text.easy_npc.config.custom_skin_text": "Custom skins allows you to use locally stored skins for the NPCs.",
   "text.easy_npc.config.debug": "Debug",
   "text.easy_npc.config.default_pose": "Default",
   "text.easy_npc.config.default_position": "Default",
@@ -35,8 +35,8 @@
   "text.easy_npc.config.delete": "Delete",
   "text.easy_npc.config.dialog": "Dialog",
   "text.easy_npc.config.dialog_actions": "Dialog",
-  "text.easy_npc.config.dialog_text": "Dialog Text",
   "text.easy_npc.config.dialog_placeholder": "The dialog supports the following placeholders:\n@npc - Name of the NPC\n@initiator - Name of the initiator of the dialog",
+  "text.easy_npc.config.dialog_text": "Dialog Text",
   "text.easy_npc.config.disable_dialog": "None",
   "text.easy_npc.config.disable_dialog_checkbox": "Disable Dialog",
   "text.easy_npc.config.disable_dialog_text": "The checkbox will disable the dialog, which means that the dialog will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the dialog is not necessary or may be intrusive to the user experience",
@@ -50,6 +50,7 @@
   "text.easy_npc.config.on_no_selection": "On No Selection",
   "text.easy_npc.config.on_open_dialog": "On Open Dialog",
   "text.easy_npc.config.on_yes_selection": "On Yes Selection",
+  "text.easy_npc.config.open_textures_folder": "Open %s Textures Folder",
   "text.easy_npc.config.player_skin": "Player",
   "text.easy_npc.config.pose": "Pose",
   "text.easy_npc.config.pose.body": "Body",
@@ -70,6 +71,7 @@
   "text.easy_npc.config.position": "Position",
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
+  "text.easy_npc.config.reload_textures": "Reload Textures",
   "text.easy_npc.config.reset": "Reset",
   "text.easy_npc.config.rotation": "Rotation",
   "text.easy_npc.config.save": "Save",
@@ -79,6 +81,7 @@
   "text.easy_npc.config.scale_z": "Scale Z",
   "text.easy_npc.config.scaling": "Scaling",
   "text.easy_npc.config.skin": "Skin",
+  "text.easy_npc.config.skin_reloading": "Reloading skins, please wait ...",
   "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
   "text.easy_npc.config.yes": "Yes",
