--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -15,6 +15,7 @@
   "item.easy_npc.humanoid_spawn_egg": "Humanoides NPC-Spawn-Ei",
   "item.easy_npc.skeleton_spawn_egg": "Skelett NPC-Spawn-Ei",
   "item.easy_npc.villager_spawn_egg": "Dorfbewohner NPC-Spawn-Ei",
+  "item.easy_npc.zombie_villager_spawn_egg": "Zombie Dorfbewohner NPC-Spawn-Ei",
 
   "text.easy_npc.config.actions": "Aktionen",
   "text.easy_npc.config.add": "Hinzufügen",
@@ -23,11 +24,13 @@
   "text.easy_npc.config.cancel": "Abbrechen",
   "text.easy_npc.config.clear": "Löschen",
   "text.easy_npc.config.custom_pose": "Benutzerdefiniert",
+  "text.easy_npc.config.custom_preset": "Benutzerdefiniert",
   "text.easy_npc.config.custom_skin": "Benutzerdefiniert",
   "text.easy_npc.config.custom_skin_text": "Custom Skins ermöglicht es dir, lokal gespeicherte Skins für die NPCs zu verwenden.",
   "text.easy_npc.config.debug": "Debuggen",
   "text.easy_npc.config.default_pose": "Standard",
   "text.easy_npc.config.default_position": "Standard",
+  "text.easy_npc.config.default_preset": "Standard",
   "text.easy_npc.config.default_rotation": "Standard",
   "text.easy_npc.config.default_skin": "Standard",
   "text.easy_npc.config.delete": "Löschen",
@@ -40,14 +43,23 @@
   "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
   "text.easy_npc.config.equipment": "Ausrüstung",
   "text.easy_npc.config.execute_as_player": "Als Spieler ausführen",
+  "text.easy_npc.config.export": "▽ Exportieren",
+  "text.easy_npc.config.export_preset_text": "Durch Betätigung des Export-Buttons werden die NPC-Einstellungen unter %1$s als %2$s lokal gespeichert und können mithilfe der Import-Funktion in anderen NPCs des gleichen Typs geladen werden.",
+  "text.easy_npc.config.export_preset_world_text": "Durch Betätigung des Export-Buttons werden die NPC-Einstellungen in den Weltdaten gespeichert und können  mithilfe der Import-Funktion in anderen NPCs des gleichen Typs geladen werden oder als neuer NPC über den '/easy_npc preset import' Befehl.",
+  "text.easy_npc.config.import": "△ Importieren",
+  "text.easy_npc.config.import_default_preset": "Importiere Standard Vorlage",
+  "text.easy_npc.config.import_custom_preset": "Importiere benutzerdefinierte Vorlage",
+  "text.easy_npc.config.import_world_preset": "Importiere Welt Vorlage",
   "text.easy_npc.config.lock_rotation": "Sperre",
   "text.easy_npc.config.no": "Nein",
   "text.easy_npc.config.no_answer": "Nein - Antwort",
+  "text.easy_npc.config.no_presets_found": "Keine Vorlagen gefunden!",
   "text.easy_npc.config.on_close_dialog": "Beim schließen des Dialog",
   "text.easy_npc.config.on_interaction": "Beim Interaktion",
   "text.easy_npc.config.on_no_selection": "Beim auswählen von Nein",
   "text.easy_npc.config.on_open_dialog": "Beim öffnen des Dialog",
   "text.easy_npc.config.on_yes_selection": "Beim auswählen von Ja",
+  "text.easy_npc.config.open_custom_export_preset_folder": "Öffne den Ordner für benutzerdefinierte Vorlagen",
   "text.easy_npc.config.open_textures_folder": "Ordner für %s Texturen öffnen",
   "text.easy_npc.config.player_skin": "Spieler",
   "text.easy_npc.config.pose": "Pose",
@@ -67,6 +79,10 @@
   "text.easy_npc.config.pose.standing": "Stehen",
   "text.easy_npc.config.pose.swimming": "Schwimmen",
   "text.easy_npc.config.position": "Position",
+  "text.easy_npc.config.preset_default_for": "Standard Vorlagen für %s",
+  "text.easy_npc.config.preset_world_for": "Welt Vorlagen für %s",
+  "text.easy_npc.config.preset_custom_for": "Benutzerdefinierte Vorlagen für %s",
+  "text.easy_npc.config.preset_name": "Vorlagenname",
   "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
   "text.easy_npc.config.reload_textures": "Texturen neu laden",
@@ -82,15 +98,22 @@
   "text.easy_npc.config.skin_reloading": "Skins werden neu geladen, bitte warten ...",
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen oder eine Skin-URL",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
+  "text.easy_npc.config.world_preset": "Welt",
   "text.easy_npc.config.yes": "Ja",
   "text.easy_npc.config.yes_answer": "Ja - Antwort",
   "text.easy_npc.config.yes_no_dialog": "Ja/Nein",
+
+  "text.easy_npc.not_implemented": "Noch nicht implementiert!",
 
   "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für Easy NPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
 
   "text.easy_npc.removeNPC.deleteButton": "Löschen",
   "text.easy_npc.removeNPC.deleteQuestion": "Sind Sie sicher, dass Sie diesen NPC löschen möchten?",
   "text.easy_npc.removeNPC.deleteWarning": "'%s' wird für immer verloren sein! (Das ist eine sehr lange Zeit!)",
+
+  "text.easy_npc.preset.importButton": "Importiere Vorlage",
+  "text.easy_npc.preset.importQuestion": "Sind Sie sicher, dass Sie die Vorlage '%s' importieren möchten?",
+  "text.easy_npc.preset.importWarning": "Alle aktuellen Einstellungen für '%s' werden überschrieben!",
 
   "itemGroup.easy_npc.config_items": "EasyNPC - Konfigurationswerkzeuge",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn-Eier"
