--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -15,6 +15,7 @@
   "item.easy_npc.humanoid_spawn_egg": "Humanoid NPC Spawn Egg",
   "item.easy_npc.skeleton_spawn_egg": "Skeleton NPC-Spawn-Ei",
   "item.easy_npc.villager_spawn_egg": "Villager NPC Spawn Egg",
+  "item.easy_npc.zombie_villager_spawn_egg": "Zombie Villager NPC Spawn Egg",
 
   "text.easy_npc.config.actions": "Actions",
   "text.easy_npc.config.add": "Add",
@@ -23,11 +24,13 @@
   "text.easy_npc.config.cancel": "Cancel",
   "text.easy_npc.config.clear": "Clear",
   "text.easy_npc.config.custom_pose": "Custom",
+  "text.easy_npc.config.custom_preset": "Custom",
   "text.easy_npc.config.custom_skin": "Custom",
   "text.easy_npc.config.custom_skin_text": "Custom skins allows you to use locally stored skins for the NPCs.",
   "text.easy_npc.config.debug": "Debug",
   "text.easy_npc.config.default_pose": "Default",
   "text.easy_npc.config.default_position": "Default",
+  "text.easy_npc.config.default_preset": "Default",
   "text.easy_npc.config.default_rotation": "Default",
   "text.easy_npc.config.default_skin": "Default",
   "text.easy_npc.config.delete": "Delete",
@@ -40,14 +43,23 @@
   "text.easy_npc.config.disable_dialog_text": "The checkbox will disable the dialog, which means that the dialog will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the dialog is not necessary or may be intrusive to the user experience",
   "text.easy_npc.config.equipment": "Equipment",
   "text.easy_npc.config.execute_as_player": "Execute as player",
+  "text.easy_npc.config.export": "▽ Export",
+  "text.easy_npc.config.export_preset_text": "Upon clicking the Export button, the NPC settings are saved locally under %1$s as %2$s and can be loaded into other NPCs of the same type using the Import function.",
+  "text.easy_npc.config.export_preset_world_text": "Upon clicking the Export button, the NPC settings are saved inside the world data and can be loaded into other NPCs of the same type using the Import function or as new NPC over the '/easy_npc preset import' command.",
+  "text.easy_npc.config.import": "△ Import",
+  "text.easy_npc.config.import_default_preset": "Import Default Preset",
+  "text.easy_npc.config.import_custom_preset": "Import Custom Preset",
+  "text.easy_npc.config.import_world_preset": "Import World Preset",
   "text.easy_npc.config.lock_rotation": "Lock",
   "text.easy_npc.config.no": "No",
   "text.easy_npc.config.no_answer": "No - Answer",
+  "text.easy_npc.config.no_presets_found": "No presets found!",
   "text.easy_npc.config.on_close_dialog": "On Close Dialog",
   "text.easy_npc.config.on_interaction": "On Interaction",
   "text.easy_npc.config.on_no_selection": "On No Selection",
   "text.easy_npc.config.on_open_dialog": "On Open Dialog",
   "text.easy_npc.config.on_yes_selection": "On Yes Selection",
+  "text.easy_npc.config.open_custom_export_preset_folder": "Open Custom Export Preset Folder",
   "text.easy_npc.config.open_textures_folder": "Open %s Textures Folder",
   "text.easy_npc.config.player_skin": "Player",
   "text.easy_npc.config.pose": "Pose",
@@ -67,6 +79,9 @@
   "text.easy_npc.config.pose.standing": "Standing",
   "text.easy_npc.config.pose.swimming": "Swimming",
   "text.easy_npc.config.position": "Position",
+  "text.easy_npc.config.preset_default_for": "Standard Preset for %s",
+  "text.easy_npc.config.preset_world_for": "World Preset for %s",
+  "text.easy_npc.config.preset_custom_for": "Custom Preset for %s",
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
   "text.easy_npc.config.reload_textures": "Reload Textures",
@@ -82,15 +97,22 @@
   "text.easy_npc.config.skin_reloading": "Reloading skins, please wait ...",
   "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
+  "text.easy_npc.config.world_preset": "World",
   "text.easy_npc.config.yes": "Yes",
   "text.easy_npc.config.yes_answer": "Yes - Answer",
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
+
+  "text.easy_npc.not_implemented": "Not implemented yet!",
 
   "text.easy_npc.item.easy_npc_wand": "The Easy NPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
 
   "text.easy_npc.removeNPC.deleteButton": "Delete",
   "text.easy_npc.removeNPC.deleteQuestion": "Are you sure you want to delete this NPC?",
   "text.easy_npc.removeNPC.deleteWarning": "'%s' will be lost forever! (A long time!)",
+
+  "text.easy_npc.preset.importButton": "Import Preset",
+  "text.easy_npc.preset.importQuestion": "Are you sure you want to import the preset '%s'?",
+  "text.easy_npc.preset.importWarning": "This will overwrite the '%s' NPC settings!",
 
   "itemGroup.easy_npc.config_items": "EasyNPC - Config Items",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs"
