--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -19,6 +19,7 @@
 
   "text.easy_npc.config.actions": "Aktionen",
   "text.easy_npc.config.add": "Hinzufügen",
+  "text.easy_npc.config.advanced_pose": "Erweitert",
   "text.easy_npc.config.basic_actions": "Grundlegend",
   "text.easy_npc.config.basic_dialog": "Einfach",
   "text.easy_npc.config.cancel": "Abbrechen",
@@ -63,6 +64,7 @@
   "text.easy_npc.config.open_textures_folder": "Ordner für %s Texturen öffnen",
   "text.easy_npc.config.player_skin": "Spieler",
   "text.easy_npc.config.pose": "Pose",
+  "text.easy_npc.config.pose.arms": "Arme",
   "text.easy_npc.config.pose.body": "Körper",
   "text.easy_npc.config.pose.crouching": "Hocken",
   "text.easy_npc.config.pose.dying": "Sterben",
