Added custom pose editor which supports rotation, position and visibility of the model parts. Added better model animation support for custom poses. Added better NBT format for easier editing and more complex data types. Added crouch pose for models which not support this by default. Improved import and export functionality for NPCs. Improved documentation and added more examples. Cleanup death code for better performance.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -21,6 +21,7 @@
 
   "text.easy_npc.config.actions": "Actions",
   "text.easy_npc.config.add": "Add",
+  "text.easy_npc.config.advanced_pose": "Advanced",
   "text.easy_npc.config.basic_actions": "Basic",
   "text.easy_npc.config.basic_dialog": "Basic",
   "text.easy_npc.config.cancel": "Cancel",
@@ -65,6 +66,7 @@
   "text.easy_npc.config.open_textures_folder": "Open %s Textures Folder",
   "text.easy_npc.config.player_skin": "Player",
   "text.easy_npc.config.pose": "Pose",
+  "text.easy_npc.config.pose.arms": "Arms",
   "text.easy_npc.config.pose.body": "Body",
   "text.easy_npc.config.pose.crouching": "Crouching",
   "text.easy_npc.config.pose.dying": "Dying",
