Added new distance based actions for 16, 8, 4 and 1 block distance from the NPC. Fixed issue to allow empty action to reset actions #19.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -42,6 +42,7 @@
   "text.easy_npc.config.disable_dialog": "Keinen",
   "text.easy_npc.config.disable_dialog_checkbox": "Deaktiviere Dialog",
   "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
+  "text.easy_npc.config.distance_actions": "Entfernung",
   "text.easy_npc.config.equipment": "Ausrüstung",
   "text.easy_npc.config.execute_as_player": "Als Spieler ausführen",
   "text.easy_npc.config.export": "▽ Exportieren",
@@ -57,6 +58,10 @@
   "text.easy_npc.config.no_presets_found": "Keine Vorlagen gefunden!",
   "text.easy_npc.config.on_close_dialog": "Beim schließen des Dialog",
   "text.easy_npc.config.on_interaction": "Beim Interaktion",
+  "text.easy_npc.config.on_distance_near": "Beim Annäherung <= 16 Blöcke",
+  "text.easy_npc.config.on_distance_close": "Beim nahe Entfernung <= 8 Blöcke",
+  "text.easy_npc.config.on_distance_very_close": "Beim sehr nahe Entfernung <= 4 Blöcke",
+  "text.easy_npc.config.on_distance_touch": "Beim berührungs Entfernung <= 1 Block",
   "text.easy_npc.config.on_no_selection": "Beim auswählen von Nein",
   "text.easy_npc.config.on_open_dialog": "Beim öffnen des Dialog",
   "text.easy_npc.config.on_yes_selection": "Beim auswählen von Ja",
