--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -42,6 +42,7 @@
   "text.easy_npc.config.disable_dialog": "None",
   "text.easy_npc.config.disable_dialog_checkbox": "Disable Dialog",
   "text.easy_npc.config.disable_dialog_text": "The checkbox will disable the dialog, which means that the dialog will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the dialog is not necessary or may be intrusive to the user experience",
+  "text.easy_npc.config.distance_actions": "Distance",
   "text.easy_npc.config.equipment": "Equipment",
   "text.easy_npc.config.execute_as_player": "Execute as player",
   "text.easy_npc.config.export": "▽ Export",
@@ -57,6 +58,10 @@
   "text.easy_npc.config.no_presets_found": "No presets found!",
   "text.easy_npc.config.on_close_dialog": "On Close Dialog",
   "text.easy_npc.config.on_interaction": "On Interaction",
+  "text.easy_npc.config.on_distance_near": "On Near Distance <= 16 Blocks",
+  "text.easy_npc.config.on_distance_close": "On Close Distance <= 8 Blocks",
+  "text.easy_npc.config.on_distance_very_close": "On very Close Distance <= 4 Blocks",
+  "text.easy_npc.config.on_distance_touch": "On Touch Distance <= 1 Block",
   "text.easy_npc.config.on_no_selection": "On No Selection",
   "text.easy_npc.config.on_open_dialog": "On Open Dialog",
   "text.easy_npc.config.on_yes_selection": "On Yes Selection",
